this commit is after making all the program functional